# bc3_reader

./: .gitignore  Readme.md  __init__.py
bc3_lib/: pyproject.toml
bc3_lib/app/: flatten.py  pandas.py
bc3_lib/domain/: node.py
bc3_lib/infra/: reader.py
infra/: bc3_reader.py
